feat: add editInput focus event

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WSForever</string>
+    <string name="title_activity_baidu_asrdigital_dialog">BaiduASRDigitalDialog</string>
 </resources>
